--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-
+server.port = 1000
+!-- MYSQL database
+spring.datasource.url=jdbc:mysql://localhost:3306/local_bank?autoreconnect = true & zeroDateTimeBehavior=round & reWriteBatchedInserts=true
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.database = MYSQL 
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.jdbc.batch_size=100
